[gd_scene load_steps=26 format=3 uid="uid://ctvurwa2kqli0"]

[ext_resource type="Script" path="res://scripts/coco.gd" id="1_s8rkf"]
[ext_resource type="Script" path="res://scripts/camera_2d.gd" id="2_cudp5"]
[ext_resource type="Texture2D" uid="uid://bv8optfes7yr5" path="res://arts/coco-attack.png" id="3_sj8bs"]
[ext_resource type="Texture2D" uid="uid://br17rkenbojqy" path="res://arts/coco-jump.PNG" id="4_xan4n"]
[ext_resource type="Texture2D" uid="uid://br4f7fauxe3nr" path="res://arts/coco-still.PNG" id="5_ekn2i"]
[ext_resource type="Texture2D" uid="uid://cvuhp2w5beguv" path="res://arts/coco-walk.PNG" id="6_5mebd"]
[ext_resource type="PackedScene" uid="uid://3m8yn16m1ti0" path="res://scenes/combo_label.tscn" id="7_73i1k"]
[ext_resource type="PackedScene" uid="uid://ddck1vgo382wf" path="res://scenes/health_bar.tscn" id="8_vobfd"]
[ext_resource type="PackedScene" uid="uid://cu7ett65r633d" path="res://scenes/lives_label.tscn" id="9_a1aip"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0tx44"]
atlas = ExtResource("3_sj8bs")
region = Rect2(0, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtkhc"]
atlas = ExtResource("3_sj8bs")
region = Rect2(32, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_w27fv"]
atlas = ExtResource("3_sj8bs")
region = Rect2(64, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_t53iq"]
atlas = ExtResource("4_xan4n")
region = Rect2(0, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmyvn"]
atlas = ExtResource("4_xan4n")
region = Rect2(32, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0uig"]
atlas = ExtResource("4_xan4n")
region = Rect2(64, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8x3p"]
atlas = ExtResource("4_xan4n")
region = Rect2(96, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_20hpe"]
atlas = ExtResource("5_ekn2i")
region = Rect2(0, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsonw"]
atlas = ExtResource("6_5mebd")
region = Rect2(0, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rd2gl"]
atlas = ExtResource("6_5mebd")
region = Rect2(32, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbth6"]
atlas = ExtResource("6_5mebd")
region = Rect2(64, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ol2vc"]
atlas = ExtResource("6_5mebd")
region = Rect2(96, 0, 32, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_oq0jm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tx44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtkhc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w27fv")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t53iq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmyvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0uig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8x3p")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_20hpe")
}],
"loop": true,
"name": &"still",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsonw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rd2gl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbth6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ol2vc")
}],
"loop": true,
"name": &"walk",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_evwk8"]
size = Vector2(35, 94)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lb3j2"]
radius = 19.0
height = 100.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fpfpj"]
size = Vector2(29.75, 117.5)

[node name="coco" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_s8rkf")

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(-10, 0)
scale = Vector2(3.36563, -2.36483)
script = ExtResource("2_cudp5")
player = NodePath("..")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(6, -6)
scale = Vector2(4.0625, 4.77083)
sprite_frames = SubResource("SpriteFrames_oq0jm")
animation = &"attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -2)
shape = SubResource("RectangleShape2D_evwk8")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_lb3j2")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(51.125, -6.25)
shape = SubResource("RectangleShape2D_fpfpj")

[node name="combo_label" parent="." instance=ExtResource("7_73i1k")]
offset_left = -18.0
offset_top = -728.0
offset_right = 131.0
offset_bottom = -569.0
theme_override_font_sizes/font_size = 200

[node name="health_bar" parent="." instance=ExtResource("8_vobfd")]
offset_left = -1040.0
offset_top = -698.0
offset_right = -66.0
offset_bottom = -576.0

[node name="lives_label" parent="." instance=ExtResource("9_a1aip")]
offset_left = 758.0
offset_top = -712.0
offset_right = 1133.0
offset_bottom = -553.0
theme_override_font_sizes/font_size = 200

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
